[package]
name = "ownrs"
version = "0.3.2"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Parser for OWNERS files"
documentation = "https://docs.rs/crate/ownrs"
keywords = ["parser", "owners"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshleeb/ownrs"

[dependencies]
globset = "0.4.2"
nom = "4.2.3"
