[package]
name = "ownrs"
version = "0.3.3"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Parser for OWNERS files"
documentation = "https://docs.rs/crate/ownrs"
keywords = ["parser", "owners"]
license = "MIT"
readme = "README.md"
repository = "https://git.sr.ht/~joshleeb/ownrs"
homepage = "https://git.sr.ht/~joshleeb/ownrs"

[dependencies]
globset = "0.4.6"
nom = "6.0.1"
