[package]
name = "ownrs"
version = "0.3.4"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Parser for OWNERS files"
documentation = "https://docs.rs/crate/ownrs"
keywords = ["parser", "owners"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshleeb/ownrs"
homepage = "https://github.com/joshleeb/ownrs"

[dependencies]
globset = "0.4.6"
nom = "6.0.1"
